[metadata]
version = 0.0.1
description = todo
long_description = also todo
keywords = todo, todoo
license = GNU V3
name = Locator
author = moiexpositoalonsolab
url = https://github.com/moiexpositoalonsolab/locator2
author_email = zouberou@stanford.edu
classifiers =
    Programming Language :: Python :: 3
    License :: GNU V3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages=find:
install_requires =
    numpy
    matplotlib
    torch
    pandas
    tqdm
    numpy
    pandas
    scikit-allel
    zarr
    scipy
[options.packages.find]
where = src
